# clopema_certh_ros

./: .gitignore  README.md
camera_helpers/: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
camera_helpers/CMake/: FindOpenNI2.cmake
camera_helpers/include/camera_helpers/: CollisionMask.h  OpenNICapture.h  OpenNIServiceClient.h  RobotHead.h
camera_helpers/launch/: ofsrender.launch  start_camera.launch  virtual_RH.launch  xtion3.launch
camera_helpers/src/: CollisionMask.cpp  OffscreenRenderer.cpp  OpenNI2Driver.cpp  OpenNICapture.cpp  OpenNIService.cpp  OpenNIServiceClient.cpp  calibration.cpp  calibration.h  depth_filter.cpp  handeye.cpp  handeye_calibration.cpp  lowestPoint.cpp  main.cpp  openni_capture.cpp  robot_head.cpp  robot_head_virtual.cpp  test_openni.cpp  test_openni_capture.cpp  test_rh_capture.cpp  virtual_cam_publisher.cpp
camera_helpers/srv/: OffscreenRenderService.srv  OpenNIServiceConnect.srv  OpenNIServiceGrab.srv  OpenniCapture.srv
camera_helpers/test/: test_openni_capture.cpp
certh_calibration/: CMakeLists.txt  manifest.xml
certh_calibration/scripts/: xtion1.sh  xtion2.sh  xtion3.sh
certh_calibration/src/: calibration.cpp  calibration.h  handeye.cpp  handeye_calibration.cpp
certh_demos/: CMakeLists.txt  mainpage.dox  manifest.xml
certh_demos/config/: cloth_simulator.vcg  cloth_simulator_logger.conf
certh_demos/launch/: calibrate_xtion3.launch  cloth_simulator.launch  lowest_point.launch
certh_demos/src/: ClopemaMove.cpp  ClopemaMove.h  calibrate_fixed_xtion.cpp  circleTraj.cpp  cloth_simulator.cpp  find_lowest.cpp  grab_from_table.cpp  grasp_from_floor.cpp  grippers_testing.cpp  gui.cpp  interpolation.cpp  lowestPoint.cpp  lowestPoint2.cpp  main.cpp  more_points.cpp  move_above_table_r1.cpp  move_constraints_arms.cpp  move_constraints_r1.cpp  move_home.cpp  move_joint_arms.cpp  move_joint_ext.cpp  move_joint_r1.cpp  move_pose_arms.cpp  move_pose_r2.cpp  not_tearing.cpp  open_r2_gripper.cpp  pick_up.cpp  plan_avoiding_cloth.cpp  plan_out_of_vision.cpp  planner.cpp  planning.cpp  rotate_and_grab.cpp  send_traj.cpp  shake_it.cpp  test_calib.cpp  testing.cpp  unfolding.cpp  xtion3Calibration.cpp
certh_demos/src/HFLibrary/: hf.cpp  hf.h
certh_demos/src/RFLibrary/: rf.cpp
certh_launch/: mainpage.dox  manifest.xml
certh_launch/config/: devices.cfg
certh_launch/launch/: clopema.launch  openni.launch  start_certh_robot.launch  start_robot.launch  unfold.launch  virtual_robot.launch  xtion2.launch  xtion2service.launch  xtion3.launch  xtion3filt.launch  xtion3service.launch
certh_launch/scripts/: findusb.sh  updatedevs.sh
certh_libs/: CMakeLists.txt  mainpage.dox  manifest.xml
certh_libs/include/certh_libs/: ApplicationSettings.h  Geometry.h  Helpers.h  Line2D.h  ObjectOnPlaneDetector.h  Point.h  Point2D.h  PointList2D.h  Polygon2D.h  PolygonRasterizer.h  PolygonScanner.h  Rectangle2D.h  RidgeDetector.h  ShapeMatcher.h  Triangle2D.h  TriangleMesh2D.h  TriangleMeshTopology.h  cvHelpers.h
certh_libs/src/: test_openni.cpp
certh_libs/src/alg/: CMakeLists.txt
certh_libs/src/alg/recognition/: ComputeDescriptors.cpp  IDSC_ShapeMatcher.cpp  Matching.cpp  Prototypes.cpp  ScanDir.cpp  TestMain.cpp  common_cpp.h  common_matlab.h  findLargestContour.cpp
certh_libs/src/certh_libs/srv/: _OpenniCapture.py  __init__.py
certh_libs/src/geometry/: Line2D.cpp  ObjectOnPlaneDetector.cpp  PointList2D.cpp  Polygon2D.cpp  PolygonScanIterator.cpp  PolygonScanner.cpp  Triangle2D.cpp  TriangleMesh2D.cpp  TriangleMeshTopology.cpp  Utils.cpp  triangle.c  triangle.h
certh_libs/src/image/: RidgeDetector.cpp  cvHelpers.cpp
certh_libs/src/misc/: ApplicationSettings.cpp  FileSystemHelpers.cpp
certh_libs/test/: testrec.cpp
certh_pickup/: CMakeLists.txt  manifest.xml
certh_pickup/src/: ObjectOnPlaneDetector.cpp  ObjectOnPlaneDetector.h  PickUp.cpp  PickUp.h  RidgeDetector.cpp  RidgeDetector.h  graph.cpp  picking_up.cpp  pickup.cpp  pickup_service.cpp  segment.cpp  segments.cpp  test_detector.cpp  test_pickup.cpp  test_rotate.cpp  utils.cpp
certh_pickup/src/cvblob/cvBlob/: CMakeLists.txt
certh_pickup/srv/: PickUp.srv
certh_ps/: CMakeLists.txt  cameraSettings.sh  manifest.xml
certh_ps/src/: approach_Table.cpp  leave_Table.cpp  ps_node.cpp  utilities.cpp  utilities.h
certh_ps/srv/: PhotometricStereo.srv
certh_unfolding/: CMakeLists.txt  manifest.xml
certh_unfolding/src/: RotateAndGrab.cpp  RotateAndGrab.h  Unfold.h  grasp_from_floor.cpp  partial_unfolding.cpp  partial_unfolding2.cpp  unfolding.cpp  unfoldingLP.cpp  unfolding_Service.cpp  utils.cpp
robot_helpers/: CMakeLists.txt  Makefile  kinematics_plugins.xml  manifest.xml
robot_helpers/include/robot_helpers/: Geometry.h  GoalRegion.h  JointTrajectory.h  KinematicsInterface.h  Planner.h  Planners.h  PlanningContext.h  Robot.h  TaskSpace.h  Unfold.h  Utils.h
robot_helpers/src/: FlipHands.cpp  Geometry.cpp  GoalRegion.cpp  GraspHanging.cpp  JointTrajectory.cpp  KinematicsInterface.cpp  Planner.cpp  PlanningContext.cpp  RobotHelpers.cpp  RobotUnfloding.cpp  RobotUtils.cpp  SensorPlanning.cpp  TaskSpace.cpp  ikfast_ma1400_plugin.cpp  ikfast_ma1400_solver.cpp  ikfast_xtion_plugin.cpp  ikfast_xtion_solver.cpp
robot_helpers/test/: test_helpers.cpp
viz_helpers/: CMakeLists.txt  Makefile  manifest.xml  plugin.xml
viz_helpers/CMake/: qt.cmake
viz_helpers/include/viz_helpers/: CameraViewServer.h  CommandPanelServer.h
viz_helpers/launch/: certh.vcg  showcam.launch
viz_helpers/msg/: CameraViewFeedback.msg
viz_helpers/src/: CameraView.cpp  CameraView.h  CameraViewPlugin.cpp  CameraViewPlugin.h  CameraViewServer.cpp  CameraWidget.cpp  CameraWidget.h  ClothSimulator.cpp  ClothSimulator.h  ClothSimulatorServer.cpp  CommandPanelServer.cpp  Commander.cpp  Commander.h  Dashboard.cpp  Dashboard.h  Dashboard.ui  OffscreenRenderer.cpp  Physics.cpp  QSingleItemSquareLayout.cpp  QSingleItemSquareLayout.h  camera_viewer.cpp  commander.cpp  dashboard.cpp
viz_helpers/src/viz_helpers/msg/: _CameraViewFeedback.py  __init__.py
viz_helpers/srv/: ClothSimulatorService.srv
(+46 files in other folders)
